EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/15/2009==
Trevius: (Trevius/Shendare) Swapped Beardcolor and Beard in the spawn struct for Titanium and Titanium Facial Features should be finalized now.
Trevius: SoF - Drakkin Specific Features (Heritage, Tattoo and Details) should now be fully functional for NPCs and PCs
Derision: Minimum 3% chance to proc from weapon proc buffs (e.g. vampiric embrace, call of sky etc.)
Trevius: Added encode for Illusion packets in Titanium so they see Drakkin as human after clicking off an illusion
Trevius: Optional SQL for adding a notes field to the rule_values table with notes from ruletypes.h

Required SQL: .\utils\sql\svn\518_drakkin_npc_type_features.sql
Optional SQL: .\utils\sql\svn\524_rule_values_notes.sql

==05/14/2009==
Trevius: More work on Facial Features for Characters. Trying to get them functioning properly without hacks before adding SoF Features.
Trevius: SoF - Character Facial Features other than Drakkin specific ones all now work 100% in Character Select and in game.

==05/13/2009==
Trevius: SoF - (Shendare) Corrected the FaceChange Structure and added an encode to make it work
Trevius: SoF - Identified the Drakkin related fields of the Character Select Structure
KLS: Fix for elemental dmg not calculating correctly.

==05/12/2009==
Trevius: SoF - (Shendare) Added a temp commented out test section of code to spawn struct encode
Trevius: SoF - (Shendare) Identified hairstyle, haircolor, flymode, drakkinheritage and drakkintattoo in the spawn struct
Trevius: SoF - (Shendare) Changed facial feature code for getting features slightly
Trevius: SoF - Identified beardcolor, invis, and drakkinspikes in the spawn struct
Trevius: SoF - Updated the OP_CastSpell to convert bag slot from Titanium to SoF for potion use
KLS: Reverted player corpse changes from 5/10 as they caused shadow rest to stop functioning.